Dark mode fixes (#77)

--- a/src/fonts/font-face.css
+++ b/src/fonts/font-face.css
@@ -61,3 +61,12 @@
 	font-style: normal;
 	font-display: swap;
 }
+@font-face {
+	font-family: 'AeonikMono';
+	src:
+		url('./AeonikMono/AeonikMono-Regular.woff') format('woff'),
+		url('./AeonikMono/AeonikMono-Regular.woff2') format('woff2');
+	font-weight: 400;
+	font-style: normal;
+	font-display: swap;
+}
