--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -184,12 +184,12 @@ select.astro-oojz3yon {
 
 :where(.astro-3ii7xxms)[aria-current="page"], :where(.astro-3ii7xxms)[aria-current="page"] > span {
     background-color: transparent;
-    color: var(--localstack-purple) !important;
+    color: var(--sl-color-accent) !important;
 }
 
 /* Style the parent li element when it contains an active page link */
 li:has([aria-current="page"]) > details > summary > div > span {
-    color: var(--localstack-purple) !important;
+    color: var(--sl-color-accent) !important;
 }
 
 /* Style the SVG icons purple when parent contains active page link */
