--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -88,7 +88,7 @@ h3 {
 .service-box-title {
   margin: 0 0 0.5rem 0;
   line-height: 1.4;
-  color: #212229;
+  color: var(--sl-color-gray-7);
   font-size: 20px;
   font-style: normal;
   font-weight: 500;
@@ -98,7 +98,7 @@ h3 {
 
 .service-box-description {
   font-size: 0.875rem;
-  color: #4B4E5C;
+  color: var(--sl-color-gray-4);
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
